# deeplearning

./: README.md  pyproject.toml
automatic_speech_recognition/: ASR_task_1.ipynb  ASR_task_2.ipynb  ASR_task_3.ipynb  ASR_task_4.ipynb  ASR_task_5.ipynb  ASR_task_6.ipynb  ASR_task_7.ipynb
pytorch_certification/: Fine_tuning_improving_monkey.ipynb  Transfer_Learning.ipynb  implement_CNN_in_pytorch.ipynb  tensor_their_operation.ipynb  training_an_MLP_on_fashion_mnist.ipynb  understanding_autograd.ipynb
pytorch_certification/images/module_2/: Gradcomputationgraph
vision_language_model/: Object_Detection_With_Qwen.ipynb  embedding_in_vision_language_model.ipynb  image_captioning.ipynb  zero_shot_classification_CLIP.ipynb
zero_to_hero/make_more/: make_more_bigram.ipynb  make_more_mlp.ipynb  make_more_mlp_part2.ipynb
