[project]
name = "deeplearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.4",
    "numpy<2",
    "opencv-python<4.13",
    "torch>=2.10.0",
    "torchviz>=0.0.3",
]
